fix max width on narrow screens

--- a/general.css
+++ b/general.css
@@ -55,7 +55,7 @@ h1 {
 }
 
 body {
-    max-width: 80%;
+    max-width: var(--special-max-width);
     background-color: var(--special-background);
     padding-left: var(--special-left-padding);
     font-family: "JetBrainsMono", -apple-system, Roboto, Helvetica, sans-serif;
